--- a/index.html
+++ b/index.html
@@ -35,31 +35,47 @@
 
 <script>
     async function fetchMenu(){
-        try {
-            const response = await fetch('https://web-cafe.onrender.com/api/menu');
-            const data = await response.json();
+        const coffee = ["espresso", "americano", "cappuccino", "macchiato", "latte", "flatWhite", "mocha", "cortado", "affagato"];
+        const dropdown = document.getElementById('dropdown');
+        // try {
+            const option = document.createElement ('option');
+            for(let i = 0; i < 9; i++){
+                // const response = await fetch('https://web-cafe.onrender.com/drinkName/:'+coffee[0]);
+                // const data = await response.json();
+                // console.log(data);
+                var opt = coffee[i];
+                var el = document.createElement("option");
+                el.textContent = opt;
+                el.value = opt;
+                dropdown.appendChild(el);
+            }
 
-            const dropdown = document.getElementById('dropdown');
-            data.forEach(item => {
-                const option = document.createElement('option');
-                option.value = item.drinkName;
-                option.textContent = item.drinkName;
-                dropdown.appendChild(option);
-            });
-        } catch (error) {
-            console.error('Error fetching menu:', error);
-        }
+
+            // const response = await fetch('https://web-cafe.onrender.com/');
+            // const data = await response.json();
+            // console.log(data);
+            // const dropdown = document.getElementById('dropdown');
+            // data.forEach(item => {
+            //     const option = document.createElement('option');
+            //     option.value = item.drinkName;
+            //     option.textContent = item.drinkName;
+            //     dropdown.appendChild(option);
+            // });
+        // } catch (error) {
+        //     console.error('Error fetching menu:', error);
+        // }
     }
+    fetchMenu();
     async function updateBox(){
         const dropdown = document.getElementById('dropdown');
         const selectedDrinkName = dropdown.options[dropdown.selectedIndex].text;
-
+        console.log(selectedDrinkName);
         try {
-            const response = await fetch('https://web-cafe.onrender.com/api/menu/${selectedDrinkName}');
+            const response = await fetch(`https://web-cafe.onrender.com/drinkName/:${selectedDrinkName}`);
             const drinkData = await response.json();
-
+            console.log(drinkData);
             const menuRecipeBox = document.getElementById('menuRecipeBox');
-            menuRecipeBox.textContent = 'Recipe for ${selectedDrinkName}:\n${drinkData.recipe}';
+            menuRecipeBox.textContent = `Recipe for ${selectedDrinkName}:\n${JSON.stringify(drinkData[0],null, 4)}`;
         } catch (error) {
             console.error('Error fetching recipe:', error);
         }
